<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".dialogs.CreditsDialog">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/dialogAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dialogToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            android:background="@color/backgroundColor"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/umgTextView"
        android:layout_width="@dimen/credits_text_view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/credits_space_vertical_xl"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal_s"
        android:text="@string/credits_umg"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size"
        app:layout_constraintTop_toBottomOf="@+id/dialogAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/umgLogoImageView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/courseTextView"
        android:layout_width="@dimen/credits_text_view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/credits_space_vertical_s"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal_s"
        android:text="@string/credits_course"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size"
        app:layout_constraintTop_toBottomOf="@+id/umgTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/umgLogoImageView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gradTextView"
        android:layout_width="@dimen/credits_text_view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/credits_space_vertical_s"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:text="@string/credits_grad"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size"
        app:layout_constraintTop_toBottomOf="@+id/courseTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/umgLogoImageView"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/umgLogoImageView"
        android:layout_width="@dimen/credits_umg_logo_size"
        android:layout_height="@dimen/credits_umg_logo_size"
        android:layout_marginTop="@dimen/credits_space_vertical"
        android:layout_marginEnd="@dimen/credits_space_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/dialogAppBar"
        app:layout_constraintStart_toEndOf="@id/umgTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gradTextView"
        app:srcCompat="@drawable/umg_logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleTextView"
        android:layout_width="@dimen/credits_text_view_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal"
        android:text="@string/credits_title"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/credits_text_size_xl"
        app:layout_constraintTop_toBottomOf="@+id/gradTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/membersTextView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/membersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal"
        android:layout_marginBottom="@dimen/credits_space_vertical"
        android:text="@string/credits_members"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nameMember1TextView"
        app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameMember1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal"
        android:text="@string/credits_member1"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/idMember1TextView"
        app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/idMember1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal"
        android:layout_marginBottom="@dimen/credits_space_vertical"
        android:text="@string/credits_member1_id"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size_xs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nameMember2TextView"
        app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameMember2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal"
        android:text="@string/credits_member2"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/idMember2TextView"
        app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/idMember2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal"
        android:layout_marginBottom="@dimen/credits_space_vertical_xl"
        android:text="@string/credits_member2_id"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size_xs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logoAuthorTextView"
        app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logoAuthorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/credits_space_horizontal"
        android:layout_marginEnd="@dimen/credits_space_horizontal"
        android:layout_marginBottom="@dimen/credits_space_vertical_s"
        android:text="@string/credits_icons_credits"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/secondaryTextColorDark"
        android:textSize="@dimen/credits_text_size_xs"
        android:autoLink="web"
        android:linksClickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>